--- a/docs/modules/ROOT/pages/includes/quarkus-ironjacamar_quarkus.ironjacamar.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-ironjacamar_quarkus.ironjacamar.adoc
@@ -1,4 +1,3 @@
-:summaryTableId: quarkus-ironjacamar_quarkus-ironjacamar
 [.configuration-legend]
 icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
 [.configuration-reference.searchable, cols="80,.^10,.^10"]
@@ -9,6 +8,10 @@ h|Type
 h|Default
 
 a|icon:lock[title=Fixed at build time] [[quarkus-ironjacamar_quarkus-ironjacamar-metrics-enabled]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-metrics-enabled[`quarkus.ironjacamar.metrics.enabled`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.metrics.enabled+++[]
+endif::add-copy-button-to-config-props[]
+
 
 [.description]
 --
@@ -28,6 +31,10 @@ endif::add-copy-button-to-env-var[]
 |`false`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-max-worker-execute-time]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-max-worker-execute-time[`quarkus.ironjacamar.max-worker-execute-time`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.max-worker-execute-time+++[]
+endif::add-copy-button-to-config-props[]
+
 
 [.description]
 --
@@ -41,12 +48,19 @@ ifndef::add-copy-button-to-env-var[]
 Environment variable: `+++QUARKUS_IRONJACAMAR_MAX_WORKER_EXECUTE_TIME+++`
 endif::add-copy-button-to-env-var[]
 --
-|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
+|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-ironjacamar_quarkus-ironjacamar[icon:question-circle[title=More information about the Duration format]]
 |`${QUARKUS.VERTX.MAX-WORKER-EXECUTE-TIME:60}`
 
 a|icon:lock[title=Fixed at build time] [[quarkus-ironjacamar_quarkus-ironjacamar-ra-kind]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-kind[`quarkus.ironjacamar.ra.kind`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.kind+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.kind`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.kind+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -64,8 +78,15 @@ endif::add-copy-button-to-env-var[]
 |
 
 a|icon:lock[title=Fixed at build time] [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-enable-metrics]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-enable-metrics[`quarkus.ironjacamar.ra.cm.pool.enable-metrics`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.enable-metrics+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.enable-metrics`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.enable-metrics+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -83,8 +104,15 @@ endif::add-copy-button-to-env-var[]
 |
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-config-config]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-config-config[`quarkus.ironjacamar.ra.config."config"`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.config."config"+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.config."config"`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.config."config"+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -102,8 +130,15 @@ endif::add-copy-button-to-env-var[]
 |
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-transaction-support-level]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-transaction-support-level[`quarkus.ironjacamar.ra.cm.transaction-support-level`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.transaction-support-level+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.transaction-support-level`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.transaction-support-level+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -123,8 +158,15 @@ a|`no-transaction`, `local-transaction`, `xa-transaction`
 |`xa-transaction`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-allocation-retry]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-allocation-retry[`quarkus.ironjacamar.ra.cm.allocation-retry`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.allocation-retry+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.allocation-retry`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.allocation-retry+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -142,8 +184,15 @@ endif::add-copy-button-to-env-var[]
 |`5`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-allocation-retry-wait]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-allocation-retry-wait[`quarkus.ironjacamar.ra.cm.allocation-retry-wait`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.allocation-retry-wait+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.allocation-retry-wait`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.allocation-retry-wait+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -157,12 +206,19 @@ ifndef::add-copy-button-to-env-var[]
 Environment variable: `+++QUARKUS_IRONJACAMAR_RA_CM_ALLOCATION_RETRY_WAIT+++`
 endif::add-copy-button-to-env-var[]
 --
-|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
+|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-ironjacamar_quarkus-ironjacamar[icon:question-circle[title=More information about the Duration format]]
 |`1S`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-xa-resource-timeout]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-xa-resource-timeout[`quarkus.ironjacamar.ra.cm.xa-resource-timeout`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.xa-resource-timeout+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.xa-resource-timeout`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.xa-resource-timeout+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -176,12 +232,19 @@ ifndef::add-copy-button-to-env-var[]
 Environment variable: `+++QUARKUS_IRONJACAMAR_RA_CM_XA_RESOURCE_TIMEOUT+++`
 endif::add-copy-button-to-env-var[]
 --
-|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
+|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-ironjacamar_quarkus-ironjacamar[icon:question-circle[title=More information about the Duration format]]
 |`120S`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-flush-strategy]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-flush-strategy[`quarkus.ironjacamar.ra.cm.flush-strategy`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.flush-strategy+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.flush-strategy`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.flush-strategy+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -199,8 +262,15 @@ a|`unknown`, `failing-connection-only`, `invalid-idle-connections`, `idle-connec
 |`failing-connection-only`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-sharable]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-sharable[`quarkus.ironjacamar.ra.cm.sharable`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.sharable+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.sharable`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.sharable+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -218,8 +288,15 @@ endif::add-copy-button-to-env-var[]
 |`true`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-enlistment]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-enlistment[`quarkus.ironjacamar.ra.cm.enlistment`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.enlistment+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.enlistment`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.enlistment+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -237,8 +314,15 @@ endif::add-copy-button-to-env-var[]
 |`true`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-connectable]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-connectable[`quarkus.ironjacamar.ra.cm.connectable`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.connectable+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.connectable`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.connectable+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -256,8 +340,15 @@ endif::add-copy-button-to-env-var[]
 |`false`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-tracking]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-tracking[`quarkus.ironjacamar.ra.cm.tracking`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.tracking+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.tracking`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.tracking+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -275,8 +366,15 @@ endif::add-copy-button-to-env-var[]
 |
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-use-ccm]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-use-ccm[`quarkus.ironjacamar.ra.cm.use-ccm`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.use-ccm+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.use-ccm`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.use-ccm+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -294,8 +392,15 @@ endif::add-copy-button-to-env-var[]
 |`true`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-interleaving]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-interleaving[`quarkus.ironjacamar.ra.cm.interleaving`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.interleaving+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.interleaving`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.interleaving+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -313,8 +418,15 @@ endif::add-copy-button-to-env-var[]
 |`false`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-is-same-rm-override]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-is-same-rm-override[`quarkus.ironjacamar.ra.cm.is-same-rm-override`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.is-same-rm-override+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.is-same-rm-override`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.is-same-rm-override+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -332,8 +444,15 @@ endif::add-copy-button-to-env-var[]
 |
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-wrap-xa-resource]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-wrap-xa-resource[`quarkus.ironjacamar.ra.cm.wrap-xa-resource`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.wrap-xa-resource+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.wrap-xa-resource`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.wrap-xa-resource+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -351,8 +470,15 @@ endif::add-copy-button-to-env-var[]
 |`true`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pad-xid]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pad-xid[`quarkus.ironjacamar.ra.cm.pad-xid`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pad-xid+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pad-xid`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pad-xid+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -370,8 +496,15 @@ endif::add-copy-button-to-env-var[]
 |`false`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-recovery-username]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-recovery-username[`quarkus.ironjacamar.ra.cm.recovery.username`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.recovery.username+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.recovery.username`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.recovery.username+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -389,8 +522,15 @@ endif::add-copy-button-to-env-var[]
 |
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-recovery-password]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-recovery-password[`quarkus.ironjacamar.ra.cm.recovery.password`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.recovery.password+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.recovery.password`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.recovery.password+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -408,8 +548,15 @@ endif::add-copy-button-to-env-var[]
 |
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-recovery-security-domain]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-recovery-security-domain[`quarkus.ironjacamar.ra.cm.recovery.security-domain`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.recovery.security-domain+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.recovery.security-domain`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.recovery.security-domain+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -427,8 +574,15 @@ endif::add-copy-button-to-env-var[]
 |
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-strategy]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-strategy[`quarkus.ironjacamar.ra.cm.pool.strategy`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.strategy+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.strategy`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.strategy+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -446,8 +600,15 @@ a|`pool-by-cri`, `pool-by-subject`, `pool-by-subject-and-cri`, `one-pool`, `reau
 |`pool-by-cri`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-min-size]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-min-size[`quarkus.ironjacamar.ra.cm.pool.config.min-size`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.config.min-size+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.min-size`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.min-size+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -465,8 +626,15 @@ endif::add-copy-button-to-env-var[]
 |`0`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-initial-size]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-initial-size[`quarkus.ironjacamar.ra.cm.pool.config.initial-size`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.config.initial-size+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.initial-size`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.initial-size+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -484,8 +652,15 @@ endif::add-copy-button-to-env-var[]
 |
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-max-size]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-max-size[`quarkus.ironjacamar.ra.cm.pool.config.max-size`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.config.max-size+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.max-size`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.max-size+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -503,8 +678,15 @@ endif::add-copy-button-to-env-var[]
 |`20`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-blocking-timeout]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-blocking-timeout[`quarkus.ironjacamar.ra.cm.pool.config.blocking-timeout`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.config.blocking-timeout+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.blocking-timeout`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.blocking-timeout+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -518,12 +700,19 @@ ifndef::add-copy-button-to-env-var[]
 Environment variable: `+++QUARKUS_IRONJACAMAR_RA_CM_POOL_CONFIG_BLOCKING_TIMEOUT+++`
 endif::add-copy-button-to-env-var[]
 --
-|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
+|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-ironjacamar_quarkus-ironjacamar[icon:question-circle[title=More information about the Duration format]]
 |`30000MS`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-idle-timeout-minutes]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-idle-timeout-minutes[`quarkus.ironjacamar.ra.cm.pool.config.idle-timeout-minutes`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.config.idle-timeout-minutes+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.idle-timeout-minutes`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.idle-timeout-minutes+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -541,8 +730,15 @@ endif::add-copy-button-to-env-var[]
 |`30`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-validate-on-match]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-validate-on-match[`quarkus.ironjacamar.ra.cm.pool.config.validate-on-match`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.config.validate-on-match+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.validate-on-match`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.validate-on-match+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -560,8 +756,15 @@ endif::add-copy-button-to-env-var[]
 |`false`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-background-validation]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-background-validation[`quarkus.ironjacamar.ra.cm.pool.config.background-validation`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.config.background-validation+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.background-validation`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.background-validation+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -579,8 +782,15 @@ endif::add-copy-button-to-env-var[]
 |`false`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-background-validation-millis]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-background-validation-millis[`quarkus.ironjacamar.ra.cm.pool.config.background-validation-millis`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.config.background-validation-millis+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.background-validation-millis`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.background-validation-millis+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -598,8 +808,15 @@ endif::add-copy-button-to-env-var[]
 |
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-prefill]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-prefill[`quarkus.ironjacamar.ra.cm.pool.config.prefill`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.config.prefill+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.prefill`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.prefill+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -617,8 +834,15 @@ endif::add-copy-button-to-env-var[]
 |`false`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-strict-min]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-strict-min[`quarkus.ironjacamar.ra.cm.pool.config.strict-min`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.config.strict-min+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.strict-min`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.strict-min+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -636,8 +860,15 @@ endif::add-copy-button-to-env-var[]
 |`false`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-use-fast-fail]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-use-fast-fail[`quarkus.ironjacamar.ra.cm.pool.config.use-fast-fail`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.config.use-fast-fail+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.use-fast-fail`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.use-fast-fail+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -655,8 +886,15 @@ endif::add-copy-button-to-env-var[]
 |`false`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-fair]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-config-fair[`quarkus.ironjacamar.ra.cm.pool.config.fair`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.config.fair+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.fair`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.config.fair+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -674,8 +912,15 @@ endif::add-copy-button-to-env-var[]
 |`true`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-sharable]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-sharable[`quarkus.ironjacamar.ra.cm.pool.sharable`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.sharable+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.sharable`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.sharable+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -693,8 +938,15 @@ endif::add-copy-button-to-env-var[]
 |`true`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-no-tx-separate-pool]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-ra-cm-pool-no-tx-separate-pool[`quarkus.ironjacamar.ra.cm.pool.no-tx-separate-pool`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.ra.cm.pool.no-tx-separate-pool+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.no-tx-separate-pool`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar."resource-adapter-name".ra.cm.pool.no-tx-separate-pool+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -712,8 +964,15 @@ endif::add-copy-button-to-env-var[]
 |`false`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-activation-spec-enabled]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-activation-spec-enabled[`quarkus.ironjacamar.activation-spec.enabled`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.activation-spec.enabled+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar.activation-spec."activation-spec-name".enabled`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.activation-spec."activation-spec-name".enabled+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -731,8 +990,15 @@ endif::add-copy-button-to-env-var[]
 |`true`
 
 a| [[quarkus-ironjacamar_quarkus-ironjacamar-activation-spec-config-config]] [.property-path]##link:#quarkus-ironjacamar_quarkus-ironjacamar-activation-spec-config-config[`quarkus.ironjacamar.activation-spec.config."config"`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.activation-spec.config."config"+++[]
+endif::add-copy-button-to-config-props[]
+
 
 `quarkus.ironjacamar.activation-spec."activation-spec-name".config."config"`
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++quarkus.ironjacamar.activation-spec."activation-spec-name".config."config"+++[]
+endif::add-copy-button-to-config-props[]
 
 [.description]
 --
@@ -770,5 +1036,3 @@ In other cases, the simplified format is translated to the `java.time.Duration` 
 * If the value is a number followed by `d`, it is prefixed with `P`.
 ====
 endif::no-duration-note[]
-
-:!summaryTableId:
